--- a/package.json
+++ b/package.json
@@ -29,8 +29,8 @@
       "cordova-plugin-ionic-keyboard": {}
     },
     "platforms": [
-      "ios",
-      "android"
+      "android",
+      "ios"
     ]
   }
 }
