--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
-  "name": "moshdiary1",
+  "name": "Mosh Diary",
   "version": "0.0.1",
-  "description": "An Ionic project",
+  "description": "Mosh Diary",
   "devDependencies": {
     "@ionic/v1-toolkit": "^1.0.0",
+    "cordova-android": "^9.0.0",
     "gulp": "^3.5.6",
     "gulp-clean-css": "^3.7.0",
     "gulp-rename": "^1.2.0",
     "gulp-sass": "^3.1.0"
   },
   "dependencies": {
-    "cordova-android": "^7.0.0",
     "cordova-ios": "4.5.5",
     "cordova-plugin-camera": "^4.0.3",
     "cordova-plugin-device": "^2.0.2",
@@ -22,7 +22,8 @@
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
-    "cordova-sqlite-storage": "git+https://github.com/litehelpers/Cordova-sqlite-storage.git"
+    "cordova-sqlite-storage": "git+https://github.com/litehelpers/Cordova-sqlite-storage.git",
+    "ionic-calendar": "^1.0.6"
   },
   "cordova": {
     "plugins": {
@@ -38,8 +39,8 @@
       "cordova-sqlite-storage": {}
     },
     "platforms": [
-      "android",
-      "ios"
+      "ios",
+      "android"
     ]
   }
 }
